k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
spec:
  selector:
    app: spring-app
  ports:
  - port: 80
    targetPort: 8080
