k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
spec:
  rules:
  - host: dev.demo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-service
            port:
              number: 80
